--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,48 +4,59 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:background="#000000">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:background="#000000">
 
-       <Button
-           android:id="@+id/btn_rewind"
-           style="@style/MidiPlayerButton"
-           android:background="@drawable/rewind" />
+        <Button
+            android:id="@+id/btn_rewind"
+            style="@style/MidiPlayerButton"
+            android:background="@drawable/rewind" />
 
-       <Button
-           android:id="@+id/btn_stop"
-           style="@style/MidiPlayerButton"
-           android:background="@drawable/stop" />
+        <Button
+            android:id="@+id/btn_restart"
+            style="@style/MidiPlayerButton"
+            android:background="@drawable/svg_replay" />
 
-       <Button
-           android:id="@+id/btn_play"
-           style="@style/MidiPlayerButton"
-           android:background="@drawable/play" />
+        <Button
+            android:id="@+id/btn_stop"
+            style="@style/MidiPlayerButton"
+            android:background="@drawable/stop" />
 
-       <Button
-           android:id="@+id/btn_fast_forward"
-           style="@style/MidiPlayerButton"
-           android:background="@drawable/fastforward" />
+        <Button
+            android:id="@+id/btn_pause"
+            style="@style/MidiPlayerButton"
+            android:background="@drawable/svg_pause" />
 
-       <TextView
-           android:id="@+id/tv_speed"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/btn_play"
+            style="@style/MidiPlayerButton"
+            android:background="@drawable/play" />
 
-       <SeekBar
-           android:id="@+id/seek_speed"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:max="150"
-           android:progress="100" />
+        <Button
+            android:id="@+id/btn_fast_forward"
+            style="@style/MidiPlayerButton"
+            android:background="@drawable/fastforward" />
 
-       <Button
-           android:id="@+id/btn_setting"
-           style="@style/MidiPlayerButton"
-           android:background="@drawable/settings" />
-   </LinearLayout>
+        <TextView
+            android:id="@+id/tv_speed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <SeekBar
+            android:id="@+id/seek_speed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:max="150"
+            android:progress="100" />
+
+        <Button
+            android:id="@+id/btn_setting"
+            style="@style/MidiPlayerButton"
+            android:background="@drawable/settings" />
+    </LinearLayout>
 
     <yin.source.com.midimusicbook.midi.musicBook.Piano
         android:id="@+id/piano"
