--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:background="#000000">
+        android:background="#000000"
+        android:padding="10dp">
 
         <Button
             android:id="@+id/btn_rewind"
@@ -46,16 +46,21 @@
             android:layout_height="wrap_content" />
 
         <!--<SeekBar-->
-            <!--android:id="@+id/seek_speed"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:max="150"-->
-            <!--android:progress="100" />-->
+        <!--android:id="@+id/seek_speed"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:max="150"-->
+        <!--android:progress="100" />-->
 
         <Button
             android:id="@+id/btn_setting"
             style="@style/MidiPlayerButton"
             android:background="@drawable/settings" />
+
+        <Button
+            android:id="@+id/btn_print"
+            style="@style/MidiPlayerButton"
+            android:background="@drawable/svg_print" />
     </LinearLayout>
 
     <yin.source.com.midimusicbook.midi.musicBook.Piano
@@ -63,10 +68,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <yin.source.com.midimusicbook.midi.musicBook.SheetMusic
-        android:layout_margin="5dp"
+    <yin.source.com.midimusicbook.midi.musicBook.MusicBook
         android:id="@+id/sheet"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="5dp" />
 
 </LinearLayout>
